--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -14,6 +14,11 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  padding: 0px 10px;
+}
+
+li{
+  display: inline;
 }
 
 a {
@@ -22,4 +27,16 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+}
+
+.header{
+  padding: 10px;
+  min-height: 10vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header div{
+
 }
