--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,16 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  min-height: 15vh;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 16px;
+}
+
+.left-container, .right-container{
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
 
 .profile-image {
@@ -45,4 +55,10 @@ a {
 
 ul {
   list-style-type: none;
+  display:flex;
+  gap: 16px;
+  padding: 0px;
+  font-weight: bold;
 }
+
+/* border: 1px dotted black; */
