--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,9 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 15px;
+  display: flex;
+  gap: 15px;
 }
 
 .icon {
@@ -33,6 +36,20 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex: 0 0 auto;
+}
+
+.modal .content{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.modal .header{
+  font-size: 20px;
+  font-weight: bold;
+  display: flex;
+  justify-content: space-between;
 }
 
 .close-button {
@@ -46,6 +63,11 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.buttons{
+  display: flex;
+  gap: 10px;
 }
 
 button {
