--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -1,10 +1,50 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+*{
+  box-sizing: border-box;
+}
+
 body {
   height: 100vh;
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header, .footer{
+  width: 100vw;
+  padding: 0px 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer{
+  background-color: #eee;
+}
+
+.header ul, .footer ul{
+  list-style-type: none;
+  padding: 0px;
+  display: flex;
+  gap: 16px;
+  text-decoration: none;
+  color: black;
+  flex-shrink: 0;
+}
+
+a{
+  text-decoration: inherit;
+  color:inherit;
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 img {
@@ -14,6 +54,8 @@ img {
 button {
   font-family: Roboto, sans-serif;
   border: none;
+  font-size: 16px;
+  padding: 5px 20px;
   border-radius: 8px;
   background: #eee;
 }
