--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -1,28 +1,79 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
 }
 
 .header {
-  height: 72px;
+  max-height: 60px;
   background: darkmagenta;
   color: white;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  font-size: 32px;
+  font-weight: 900;
+  padding: 16px;
+  flex: 0 0 auto;
 }
 
 .footer {
-  height: 72px;
+  height: 60px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 0 0 auto;
+}
+
+.content{
+  display: flex;
+  flex: 1 1 auto;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
+  padding: 16px;
+  flex-shrink: 0;
+}
+
+.sidebar ul{
+  padding: 0px;
+  list-style-type: none;
+  margin: 0px;
+}
+
+.sidebar li{
+  padding: 8px 0px;
+  font-size: 24px;
+}
+
+.sidebar a{
+  color: white;
+  text-decoration: none;
+}
+
+.cards{
+  display: flex;
+  padding: 32px;
+  flex-wrap: wrap;
+  gap:32px;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  width: 300px;
+  min-height: 250px;
+  padding: 16px;
 }
