--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -5,6 +5,9 @@
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template: repeat(4, auto) / 1fr 4fr;
+  gap: 4px;
 }
 
 .container div {
@@ -17,15 +20,24 @@
 
 .header {
   background-color: #393f4d;
+  grid-area: 1 / 1 / 2 / 3;
+  display: grid;
+  grid-template: auto / 1fr 4fr;
 }
 
 .logo {
+  grid-area: 1 / 1 / 2 / 2;
 }
 
 .menu {
+  align-self: center;
 }
 
 .menu ul {
+  display: grid;
+  grid-template: auto / repeat(4, 1fr);
+  list-style-type: none;
+  justify-items: end;
 }
 
 .menu ul,
@@ -35,6 +47,10 @@
 
 .sidebar {
   background-color: #FF7755;
+  grid-area: 2 / 1 / 4 / 2;
+  display: grid;
+  grid-template: repeat(4, 1fr) / 1fr; 
+  gap: 50px
 }
 
 .sidebar .photo {
@@ -43,6 +59,8 @@
   font-size: 12px;
   font-weight: normal;
   border-radius: 10px;
+  display: grid;
+  align-items: center;
 }
 
 .photo  {
@@ -53,6 +71,8 @@
   color: black;
   font-size: 16px;
   font-weight: normal;
+  display: grid;
+  align-items: center;
 }
 
 .nav {
@@ -60,6 +80,9 @@
 }
 
 .nav ul {
+  display: grid;
+  grid-template: auto / repeat(3, 1fr);
+  list-style-type: none;
 }
 
 .nav ul li {
@@ -69,6 +92,11 @@
 
 .article {
   background-color: #bccbde;
+  grid-area: 3 / 2 / 4 / 3;
+  display: grid;
+  gap: 15px;
+  grid-template: repeat(2, 1fr) / repeat(auto-fit, minmax(250px, 1fr));
+  height: fit-content;
 }
 
 .article p {
@@ -82,6 +110,7 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
@@ -97,6 +126,7 @@
 
 .footer {
   background-color: #393f4d;
+  grid-area: 4 / 1 / 5 / 3;
 }
 
 .footer p {
